--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "extra": {
         "map": [
-            ["app/code/community/DevBlog/MobileFpcFix/*", "app/code/community/DevBlog/MobileFpcFix/"],
+            ["app/code/community/DevBlog/MobileFpcFix", "app/code/community/DevBlog/MobileFpcFix"],
             ["app/etc/modules/DevBlog_MobileFpcFix.xml",  "app/etc/modules/DevBlog_MobileFpcFix.xml"]
         ]
     }
